tests/type/errors/return_type_mismatch.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() -> int {
	return "not an int";
}

scene main
{
}
